Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18906

Fix build for gcc-11 / kernel 6.11

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      A couple of recent landings have broken new kernel client builds:

        CC [M]  .../lustre-release/lustre/ptlrpc/nrs_orr.o
      .../lustre-release/lustre/ptlrpc/nrs_orr.c: In function ‘nrs_orr_supp2str’:
      .../lustre-release/lustre/ptlrpc/nrs_orr.c:1680:1: error: control reaches end of non-void function [-Werror=return-type]
       1680 | }
            | ^
      cc1: all warnings being treated as errors
      

      Fixes: f7b1fea6bff ("LU-16518 lustre: fix implicit-fallthrough warnings")

      .../lustre-release/lustre/llite/file.c: In function ‘ll_dir_finish_open’:
      .../lustre-release/lustre/llite/file.c:678:24: error: implicit declaration of function ‘page_cache_alloc’; did you mean ‘kmem_cache_alloc’? [-Werror=implicit-function-declaration]
        678 |                 page = page_cache_alloc(inode->i_mapping);
            |                        ^~~~~~~~~~~~~~~~
            |                        kmem_cache_alloc
      .../lustre-release/lustre/llite/file.c:678:22: error: assignment to ‘struct page *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
        678 |                 page = page_cache_alloc(inode->i_mapping);
            |                      ^
      cc1: all warnings being treated as errors
      

      Fixes: 4a14a51a8e0 ("LU-18448 llite: read dir on open")

            stancheff Shaun Tancheff
            stancheff Shaun Tancheff
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: