LU-18906 build: page_cache_alloc removed, missing return

Fix gcc -Wreturn-type
   nrs_orr.c:1680:1: error: control reaches end of non-void \
   function [-Werror=return-type]

Fix gcc -Wimplicit-function-declaration
   file.c:678:24: error: implicit declaration of function \
   page_cache_alloc [-Werror=implicit-function-declaration]

nodemap_idx_cluster_roles_modify() needs to be static to avoid
 error: no previous prototype for 'nodemap_idx_cluster_roles_modify' \
 [-Werror=missing-prototypes]

Test-Parameters: trivial
Fixes: f7b1fea6bff ("LU-16518 lustre: fix implicit-fallthrough warnings")
Fixes: 4a14a51a8e0 ("LU-18448 llite: read dir on open")
Fixes: 904a7f1e839 ("LU-17431 nodemap: introduce child_raise_privileges property")
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I6d5131748efc7d7fcc51c4dc3b06070057cb0f0e
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/58724
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Timothy Day <timday@amazon.com>
Reviewed-by: Robert Read <rread@ddn.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>