lustre/llite/file.c
@@ -675,7 +675,7 @@ void ll_dir_finish_open(struct inode *inode, struct ptlrpc_request *req)
 	is_hash64 = test_bit(LL_SBI_64BIT_HASH, ll_i2sbi(inode)->ll_flags);
 
 	for (i = 0; i < npages; i++) {
-		page = page_cache_alloc(inode->i_mapping);
+		page = __page_cache_alloc(mapping_gfp_mask(inode->i_mapping));
 		if (!page)
 			continue;
 
